pratice modifying index

--- a/mywebsite3/Views/Home/About.cshtml
+++ b/mywebsite3/Views/Home/About.cshtml
@@ -5,6 +5,8 @@
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
     <h2>@ViewBag.Message</h2>
+
+    <p>this change for this page</p>
 </hgroup>
 
 <article>
