--- a/mywebsite3/Views/Home/Index.cshtml
+++ b/mywebsite3/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>Hello website</h1>
+                <h1>Hello website testing</h1>
                 <h2>@ViewBag.Message</h2>
             </hgroup>
             <p>
