--- a/mywebsite3/Views/Home/About.cshtml
+++ b/mywebsite3/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
     <h1>@ViewBag.Title.</h1>
     <h2>@ViewBag.Message</h2>
 
-    <p>this change for this page</p>
+    <p>this change for this page, I will make more changes</p>
 </hgroup>
 
 <article>
