change the article and site size

--- a/mywebsite3/Views/Home/About.cshtml
+++ b/mywebsite3/Views/Home/About.cshtml
@@ -6,12 +6,11 @@
     <h1>@ViewBag.Title.</h1>
     <h2>@ViewBag.Message</h2>
 
-    <p>this change for this page, I will make more changes</p>
-</hgroup>
+    </hgroup>
 
 <article>
     <p>
-        Use this area to provide additional information.
+        I am updating the article
     </p>
 
     <p>
