added second article update

--- a/mywebsite3/Views/Home/About.cshtml
+++ b/mywebsite3/Views/Home/About.cshtml
@@ -14,7 +14,7 @@
     </p>
 
     <p>
-        Use this area to provide additional information.
+        doing my second article update
     </p>
 
     <p>
