made change to my 3rd article

--- a/mywebsite3/Views/Home/About.cshtml
+++ b/mywebsite3/Views/Home/About.cshtml
@@ -18,7 +18,7 @@
     </p>
 
     <p>
-        Use this area to provide additional information.
+        my third article change
     </p>
 </article>
 
